# rewind

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
rewind-cli/: Cargo.toml
rewind-cli/shell/: bash.bash  fish.fish  zsh.zsh
rewind-cli/src/: main.rs
rewind-cli/src/cmd/: functions.rs  history.rs  init.rs  mod.rs  recent.rs  run.rs  search.rs  shortcut.rs  status.rs
rewind-cli/src/tui/: history.rs  mod.rs  recent.rs  search.rs  shared.rs  shortcut.rs  themes.rs
rewind-core/: Cargo.toml
rewind-core/src/: db.rs  entry.rs  functions.rs  fuzzy.rs  lib.rs  query.rs  query_shortcuts.rs  shortcut.rs  socket.rs
rewind-daemon/: Cargo.toml
rewind-daemon/src/: main.rs
tests/shell/: bash.sh  fish.sh  zsh.sh
