[workspace]
resolver = '3'
members = [ "rewind-core", "rewind-daemon", "rewind-cli"]

[workspace.package]
version = "0.7.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
git2 = { version = "0.21.0", default-features = false }
nucleo = "0.5"
ratatui = "0.30.1"
crossterm = "0.29.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
nucleo-matcher = "0.3.1"
ratatui-textarea = "0.9.2"
