[package]
name = "rewind-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rw"
path = "src/main.rs"

[dependencies]
rewind-core = { path = "../rewind-core" }
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
chrono = { workspace = true }
nucleo = { workspace = true }
git2 = { workspace = true }
rusqlite = { workspace = true }
nucleo-matcher = { workspace = true }
ratatui-textarea = { workspace = true }
