[package]
name = "rewind-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rw"
path = "src/main.rs"

[dependencies]
rewind-core = { path = "../rewind-core" }
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
chrono = { workspace = true }
nucleo = { workspace = true }
git2 = { workspace = true }
rusqlite = { workspace = true }
nucleo-matcher = { workspace = true }
ratatui-textarea = { workspace = true }
