[package]
name = "rewind-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
git2 = { workspace = true }
nucleo-matcher = { workspace = true }
