[package]
name = "rewind-core"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
git2 = { workspace = true }
nucleo-matcher = { workspace = true }
