[package]
name = "rewind-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rw-daemon"
path = "src/main.rs"

[dependencies]
rewind-core = { path = "../rewind-core" }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
git2 = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
